Add nonhomogeneous dirichlet BCs.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,3 +1,2 @@
 add_executable(atest test.cc)
-target_link_libraries(atest cedar ${cedar_LIBRARIES} ${cedar-deps})
-
+target_link_libraries(atest stella cedar ${cedar_LIBRARIES} ${cedar-deps})
